--- a/hap/index.html
+++ b/hap/index.html
@@ -1,13 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HAP</title>
+    <title>HAP - make it happen!</title>
+    <meta name="description" content="Discover events, earn points, live life. HAP is the gamified event platform that rewards you for exploring your city." />
+    <meta name="author" content="HAP" />
+
+    <meta property="og:title" content="HAP - make it happen!" />
+    <meta property="og:description" content="Discover events, earn points, live life. HAP is the gamified event platform that rewards you for exploring your city." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
+
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
