--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <meta property="og:title" content="hap - Smart Flashcard Platform for Engineering Students" />
     <meta property="og:description" content="Master engineering with smart flashcards. Create, share, and study bite-sized Q&A decks with gamification features." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@hap_flashcard" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
