--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" sizes="64x64 128x128 256x256" href="/favicon.ico" />
 
     <meta property="og:title" content="hap - Smart Flashcard Platform for Engineering Students" />
     <meta property="og:description" content="Master engineering with smart flashcards. Create, share, and study bite-sized Q&A decks with gamification features." />
